# airplanes_crashes

./: category.json  crash_summary_categorization.py  crashes_with_coordinates.csv  crashes_with_geometries.geojson  create_maps.py  dashboard.py  location_names.json  location_names.py  main.py  pyproject.toml  scrap_lat_lng.py  scrap_lat_lng_googlemaps.py
